<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2018 Mateusz Widuch

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<merge xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <ImageView
    android:id="@+id/step_image"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:contentDescription="@string/a11y_recipe_picture"
    android:scaleType="centerCrop"
    android:visibility="invisible"
    app:layout_constraintDimensionRatio="H,16:9"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:srcCompat="@drawable/loading_image" />

  <FrameLayout
    android:id="@+id/step_video_container"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:visibility="gone"
    app:layout_constraintDimensionRatio="H,16:9"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
      android:id="@+id/step_video_player"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      app:controller_layout_id="@layout/playback_control"
      app:show_timeout="5000" />

  </FrameLayout>

  <ImageView
    android:id="@+id/play_video_btn"
    android:layout_width="@dimen/play_button_size"
    android:layout_height="@dimen/play_button_size"
    android:background="@drawable/play_button_bg"
    android:contentDescription="@string/exo_controls_play_description"
    android:src="@drawable/exo_controls_play"
    android:tint="@color/colorBackground"
    android:visibility="gone"
    app:layout_constraintBottom_toBottomOf="@id/step_video_container"
    app:layout_constraintEnd_toEndOf="@id/step_video_container"
    app:layout_constraintStart_toStartOf="@id/step_video_container"
    app:layout_constraintTop_toTopOf="@id/step_video_container" />

  <TextView
    android:id="@+id/step_number"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/content_padding"
    android:layout_marginTop="@dimen/content_padding"
    android:layout_marginStart="@dimen/content_spacing"
    android:layout_marginEnd="@dimen/content_padding"
    android:textAppearance="@style/AppText.RecipeDetails.Label"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/step_image" />

  <ScrollView
    android:id="@+id/step_description_frame"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/content_padding"
    android:layout_marginStart="@dimen/content_padding"
    android:layout_marginEnd="@dimen/content_padding"
    app:layout_constraintBottom_toTopOf="@id/step_buttons_frame"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/step_number"
    app:layout_constraintVertical_bias="0.0">

    <TextView
      android:id="@+id/step_description"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textAppearance="@style/AppText.Body"
      tools:context="com.mattwiduch.bakeit.ui.step_detail.StepDetailFragment"
      tools:text="Step description" />

  </ScrollView>

  <View
    android:id="@+id/step_buttons_frame"
    android:layout_width="match_parent"
    android:layout_height="@dimen/ingredients_btn_height"
    android:background="@color/colorCardBackground"
    android:elevation="@dimen/step_buttons_elevation"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

  <Button
    android:id="@+id/step_previous_btn"
    style="?android:attr/borderlessButtonStyle"
    android:layout_width="wrap_content"
    android:layout_height="@dimen/ingredients_btn_height"
    android:layout_marginStart="@dimen/content_spacing"
    android:text="@string/step_previous_btn"
    android:textColor="@color/colorTextSecondary"
    android:translationZ="@dimen/step_buttons_elevation"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

  <Button
    android:id="@+id/step_next_btn"
    style="?android:attr/borderlessButtonStyle"
    android:layout_width="wrap_content"
    android:layout_height="@dimen/ingredients_btn_height"
    android:layout_marginEnd="@dimen/content_spacing"
    android:text="@string/step_next_btn"
    android:textColor="@color/colorAccent"
    android:translationZ="@dimen/step_buttons_elevation"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent" />

</merge>
