...
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<android.support.v7.widget.CardView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:id="@+id/playback_controller"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:layout_margin="@dimen/content_padding"
  android:orientation="horizontal"
  android:layout_gravity="bottom"
  android:visibility="invisible"
...
      android:layout_marginEnd="8dp"
      android:includeFontPadding="false"

      android:textColor="@color/colorTextSecondary"/>

    <ImageButton
      android:id="@+id/exo_fullscreen"
      android:layout_width="24dp"
      android:layout_height="24dp"
      android:layout_margin="4dp"
      android:tint="@color/colorText"
      android:backgroundTint="@color/colorBackground"
      android:src="@drawable/ic_fullscreen"
...
